production/notification_service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: production
spec:
  replicas: 1   
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      imagePullSecrets:
      - name: aws-ecr-cred
      containers:
      - name: notification-service
        image: 024955634588.dkr.ecr.us-east-1.amazonaws.com/notification_service:6b87943b-20251218043659
        ports:
        - containerPort: 8005
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
