production/notification_service/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: notification-service
  namespace: production
spec:
  host: notification-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
